[package]
name = "rust_dropbox"
version = "0.1.1"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a convenient tool of dropbox-api depends on http-api with async access"
categories = ["api-bindings","development-tools"]
keywords = ["api","dropbox"]
repository = "https://github.com/sinyo-matu/rust_dropbox"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.0"
reqwest = {version="0.11.1",features=["json"]}
serde = {version = "1.0.0",features = ["derive"]}
async-trait = "0.1.45"

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
