[package]
name = "rust-dropbox"
version = "0.2.5"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a convenient tool of dropbox-api binding, with non-blocking and blocking api"
categories = ["api-bindings","development-tools"]
keywords = ["api","dropbox"]
repository = "https://github.com/sinyo-matu/rust-dropbox"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
non-blocking = ["reqwest","async-trait"]
blocking=["ureq"]

[dependencies]
serde_json = "1.0.0"
serde = {version = "1.0.0",features = ["derive"]}
ureq = { version="2.0.2",features= ["json"],optional=true }
reqwest = {version="0.11.1",features=["json","blocking"],optional=true}
async-trait = {version="0.1.45",optional=true}

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
